# dockmate

./: MANIFEST.in  pyproject.toml  readme.md
dockmate/: .gitignore  __init__.py  docking_engine.py  ligand.py  pocket_finder.py  protein.py
dockmate/utils/: __init__.py  cleaner.py  fetcher.py  viewer.py
examples/: example_2.ipynb  multiple_ligand_docking.ipynb
